--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* The code below puts the title of the website in the center */
 .title{ 
     text-align: center;
     font-family: 'Trebuchet MS', sans-serif;
@@ -13,10 +12,26 @@ body{
     font-weight: lighter;
 }
 
-.bottons{
-  color: #D7BEDA;
+.stats-pics{
+  width: 450px;
+  padding: 5px;
+  border: 5px solid#9F86C0;
+  align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.stress-causes{
+  border: 5px solid #5E548E;
+  padding: 5px;
+  margin: 10px;
+}
+
+.buttons{
+  color: #231942;
   text-align: center;
-  background-color: #231942;
+  background-color: #E0B1CB;
 }
 
 .minds{
@@ -30,6 +45,13 @@ body{
   
 }
 
+.heart{
+  width: 400px;
+  align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .section {
     color: #D7BEDA;
